Add logo, fix pom wrong main, tweak histrorico and graficos view